hugr-llvm/src/extension/snapshots/hugr_llvm__extension__prelude__test__prelude_unpack_tuple@pre-mem2reg@llvm14.snap
---
source: hugr-llvm/src/extension/prelude.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define internal { i1, i1 } @_hl.main.1({ i1, i1 } %0) {
alloca_block:
  %"0" = alloca i1, align 1
  %"1" = alloca i1, align 1
  %"2_0" = alloca { i1, i1 }, align 8
  %"4_0" = alloca i1, align 1
  %"4_1" = alloca i1, align 1
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store { i1, i1 } %0, { i1, i1 }* %"2_0", align 1
  %"2_01" = load { i1, i1 }, { i1, i1 }* %"2_0", align 1
  %1 = extractvalue { i1, i1 } %"2_01", 0
  %2 = extractvalue { i1, i1 } %"2_01", 1
  store i1 %1, i1* %"4_0", align 1
  store i1 %2, i1* %"4_1", align 1
  %"4_02" = load i1, i1* %"4_0", align 1
  %"4_13" = load i1, i1* %"4_1", align 1
  store i1 %"4_02", i1* %"0", align 1
  store i1 %"4_13", i1* %"1", align 1
  %"04" = load i1, i1* %"0", align 1
  %"15" = load i1, i1* %"1", align 1
  %mrv = insertvalue { i1, i1 } undef, i1 %"04", 0
  %mrv6 = insertvalue { i1, i1 } %mrv, i1 %"15", 1
  ret { i1, i1 } %mrv6
}
